--- a/Main_WebsiteIteration_1/easypantry.css
+++ b/Main_WebsiteIteration_1/easypantry.css
@@ -1,14 +1,37 @@
 :root {
-  --primary-color: #4caf50;
-  --primary-color-dark: #388e3c;
+  --primary-color: #739475;
+  --primary-color-dark: #5d805f;
+  --primary-color-light: #dceddc;
+  --secondary-color: #f8f4e3;
+  --text-color: #333;
+  --accent-color-1: #ed6a5a;
+  --accent-color-2: #f7e785;
+  --content-max-width: 1000px;
+  --border-radius: 10px;
 }
 
 * {
   box-sizing: border-box;
+  margin: 0;
 }
 
 body {
-  font-family: sans-serif;
+  background-color: var(--secondary-color);
+  font-family: "Inter", sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Quicksand", sans-serif;
+}
+
+p {
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
 }
 
 img {
@@ -16,30 +39,175 @@ img {
 }
 
 .header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
   width: 100%;
-  padding: 20px;
-  border-bottom: 1px solid #e0e0e0;
+  padding: 30px 40px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
+  background-color: var(--primary-color);
+  z-index: 1000;
+}
+
+.header-content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  max-width: var(--content-max-width);
 }
 
 .nav {
   display: flex;
-  gap: 20px;
+  gap: 40px;
   align-items: center;
 }
 
 .nav a {
   text-decoration: none;
-  color: var(--text-color);
-  font-weight: 500;
+  color: rgba(255, 255, 255, 0.7);
+  font-weight: 600;
+  font-family: "Quicksand", sans-serif;
+  padding: 10px 0;
 }
 
 .nav a:hover {
-  color: var(--primary-color-dark);
+  color: white;
+  box-shadow: inset 0 -3px 0 0 rgba(255, 255, 255, 0.3);
 }
 
 .nav a.active {
-  color: var(--primary-color);
+  color: white;
+  box-shadow: inset 0 -3px 0 0 white;
+}
+
+.page-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 40px;
+  width: 100%;
+  margin-top: 120px;
+}
+
+.page-content {
+  width: 100%;
+  max-width: var(--content-max-width);
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.page-title {
+  text-align: left;
+  font-size: 2rem;
+  font-weight: 600;
+}
+
+/* Filter component styles */
+
+#ingredient-filters {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 100%;
+}
+
+#filters-container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 100%;
+}
+
+#search-input {
+  width: 100%;
+}
+
+#ingredient-category-filters-container {
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+
+.category-filter {
+  padding: 20px 30px;
+  border-radius: 5px;
+  font-size: 1rem;
+  cursor: pointer;
+  border: 1px solid var(--primary-color);
+}
+
+.category-filter:hover {
+  background-color: var(--primary-color-light);
+}
+
+.category-filter.active {
+  background-color: var(--primary-color);
+  color: white;
+}
+
+#ingredient-tag-filters-container,
+#substitution-tag-filters-container {
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+
+.ingredient-tag-filter,
+.substitution-tag-filter {
+  padding: 5px 10px;
+  border-radius: 20px;
+  font-size: 1rem;
+  cursor: pointer;
+  border: 1px solid var(--primary-color);
+}
+
+.ingredient-tag-filter:hover,
+.substitution-tag-filter:hover {
+  background-color: var(--primary-color-light);
+}
+
+.ingredient-tag-filter.active,
+.substitution-tag-filter.active {
+  background-color: var(--primary-color);
+  color: white;
+}
+
+.ingredient-tag-filter.active:hover,
+.substitution-tag-filter.active:hover {
+  background-color: var(--primary-color-dark);
+  color: white;
+}
+
+/* Input Styles */
+
+select,
+input {
+  border: 1px solid #e0e0e0;
+  padding: 10px;
+  font-size: 1.2rem;
+  border-radius: 5px;
+}
+
+select:focus,
+input:focus {
+  border-color: var(--primary-color);
+  outline: none;
+}
+
+.tags {
+  display: flex;
+  gap: 5px;
+  flex-wrap: wrap;
+}
+
+.tag {
+  background-color: #e0e0e0;
+  padding: 5px;
+  border-radius: 5px;
+  font-size: 0.8rem;
 }
