--- a/Main_WebsiteIteration_1/easypantry.css
+++ b/Main_WebsiteIteration_1/easypantry.css
@@ -33,7 +33,8 @@ h6 {
   color: var(--text-color);
 }
 
-p, li {
+p,
+li {
   font-family: "Inter", sans-serif;
   font-weight: 400;
 }
@@ -66,6 +67,33 @@ img {
   justify-content: space-between;
   width: 100%;
   max-width: var(--content-max-width);
+}
+
+.footer {
+  background-color: var(--primary-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 40px;
+  color: white;
+  width: 100%;
+  max-width: var(--content-max-width);
+}
+
+.footer-social {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.footer-social a {
+  height: 24px;
 }
 
 .nav {
