Added about page, modified homepage and homepage css

--- a/Main_WebsiteIteration_1/easypantry.css
+++ b/Main_WebsiteIteration_1/easypantry.css
@@ -37,6 +37,7 @@ p,
 li {
   font-family: "Inter", sans-serif;
   font-weight: 400;
+  color: var(--text-color);
 }
 
 img {
@@ -140,13 +141,13 @@ img {
 .page-title {
   text-align: left;
   font-size: 2rem;
-  font-weight: 600;
+  font-weight: 800;
 }
 
 .section-title {
   text-align: left;
   font-size: 1.8rem;
-  font-weight: 500;
+  font-weight: 600;
 }
 
 /* Button Style */
