--- a/Main_WebsiteIteration_1/easypantry.css
+++ b/Main_WebsiteIteration_1/easypantry.css
@@ -40,6 +40,15 @@ li {
   color: var(--text-color);
 }
 
+a {
+  text-decoration: none;
+  color: var(--primary-color);
+}
+
+a:hover {
+  color: var(--primary-color-dark);
+}
+
 img {
   max-width: 100%;
 }
@@ -66,6 +75,7 @@ img {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  gap: 20px;
   width: 100%;
   max-width: var(--content-max-width);
 }
@@ -87,6 +97,20 @@ img {
   max-width: var(--content-max-width);
 }
 
+.footer-right {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.footer-links a {
+  color: white;
+}
+
+.footer-links a:hover {
+  color: var(--accent-color-2);
+}
+
 .footer-social {
   display: flex;
   gap: 10px;
@@ -101,6 +125,10 @@ img {
   display: flex;
   gap: 40px;
   align-items: center;
+}
+
+.nav-icon {
+  display: none;
 }
 
 .nav a {
@@ -136,6 +164,7 @@ img {
   display: flex;
   flex-direction: column;
   gap: 20px;
+  min-height: calc(100vh - 295px);
 }
 
 .page-title {
@@ -266,4 +295,51 @@ input:focus {
   padding: 5px;
   border-radius: 5px;
   font-size: 0.8rem;
+}
+
+@media screen and (max-width: 1000px) {
+  .header-content {
+    position: relative;
+  }
+  .nav {
+    display: none;
+  }
+  .nav.active {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    position: absolute;
+    top: 60px;
+    right: 0;
+    width: 100%;
+    padding: 20px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    gap: 0;
+  }
+  .nav a {
+    color: var(--primary-color);
+    width: 100%;
+    text-align: center;
+    box-shadow: none;
+  }
+  .nav a:hover {
+    color: var(--primary-color-dark);
+    background-color: rgba(0, 0, 0, 0.05);
+  }
+  .nav a.active {
+    color: var(--primary-color-dark);
+    background-color: var(--primary-color-light);
+  }
+  .nav-icon {
+    display: block;
+    cursor: pointer;
+    width: 30px;
+  }
+  .footer-content {
+    flex-direction: column;
+    align-items: center;
+    gap: 50px;
+    text-align: center;
+  }
 }
