--- a/Main_WebsiteIteration_1/easypantry.css
+++ b/Main_WebsiteIteration_1/easypantry.css
@@ -81,7 +81,7 @@ img {
 }
 
 .footer {
-  background-color: var(--primary-color);
+  background-color: #022F03;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -93,14 +93,14 @@ img {
 }
 
 .footer-social a:hover svg {
-  stroke: var(--primary-color-light);
+  stroke: var(--primary-color);
 }
 
 .footer-content {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 40px;
+  padding: 40px 40px;
   color: white;
   width: 100%;
   max-width: var(--content-max-width);
@@ -119,7 +119,7 @@ img {
 }
 
 .footer-links a:hover {
-  color: var(--primary-color-light);
+  color: var(--primary-color);
 }
 
 .footer-social {
