Made home page search bar functionality

--- a/Main_WebsiteIteration_1/homepage.css
+++ b/Main_WebsiteIteration_1/homepage.css
@@ -173,7 +173,7 @@ footer {
     flex-direction: column;
     gap: 10px;
   }
-  .search-bar input {
+  .search-bar-input {
     width: 100%;
   }
   .calculator-section {
